--- a/weatherapp/src/index.css
+++ b/weatherapp/src/index.css
@@ -60,3 +60,34 @@ code {
   gap: 10px;
 }
 
+.detailedViewContainer {
+  position: absolute; /* Ensure it pops up over other content */
+  top: 150px; /* Adjust as needed to position under the day box */
+  left: 50%;
+  transform: translateX(-50%);
+  background: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000; /* Ensure it appears above other content */
+  transition: .5s;
+}
+
+.detailedView {
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.detailedView button {
+  background: none;
+  border: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.detailedView h2 {
+  margin: 0 0 20px 0;
+}
+
