--- a/weatherapp/src/index.css
+++ b/weatherapp/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #606c38;
+  color: #fefae0;
 }
 
 code {
@@ -18,6 +20,7 @@ code {
   gap: 50px;
   justify-content: center;
   padding: 20px;
+  
 }
 
 @media (max-width: 1118px) {
@@ -27,7 +30,7 @@ code {
   }
 }
 
-.daybox {
+.dayBox {
   padding: 10px;
   flex: 1;
   width: 12%;
@@ -36,9 +39,11 @@ code {
   transition: .5s;
   padding: 2px;
   height: 300px;
+  background-color: #dda15e;
+  color: #283618;
 }
 
-.daybox:hover {
+.dayBox:hover {
   box-shadow: 5px 5px 5px grey;
   background-color: bisque;
   transition: .5s;
@@ -78,6 +83,7 @@ code {
   border: 1px solid #ccc;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  color: #606c38;
 }
 
 .detailedView button {
