--- a/weatherapp/src/index.css
+++ b/weatherapp/src/index.css
@@ -33,12 +33,15 @@ code {
 .dayBox {
   padding: 10px;
   flex: 1;
-  width: 12%;
-  min-width: 120px;
+  width: auto;
+  min-width: 175px; 
+  max-width: 225px;
   border-radius: 5%;
   transition: .5s;
   padding: 2px;
-  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: #dda15e;
   color: #283618;
 }
@@ -95,5 +98,9 @@ code {
 
 .detailedView h2 {
   margin: 0 0 20px 0;
+}
+
+.Plants {
+  text-align: left;
 }
 
